--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://media.licdn.com">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://media.licdn.com/dms/image/v2/D5603AQFFlLD84gO3ng/profile-displayphoto-shrink_200_200/B56ZbHUrPpGoAc-/0/1747100808463?e=1770249600&v=beta&t=lxX4JGBaafPbvWa6K4NF4o893Py1RV_nLLL7NtoeElw">
+    <link rel="apple-touch-icon" href="https://media.licdn.com/dms/image/v2/D5603AQFFlLD84gO3ng/profile-displayphoto-shrink_200_200/B56ZbHUrPpGoAc-/0/1747100808463?e=1770249600&v=beta&t=lxX4JGBaafPbvWa6K4NF4o893Py1RV_nLLL7NtoeElw">
+    
     <!-- Structured Data (Schema.org) -->
     <script type="application/ld+json">
     {
