--- a/index.html
+++ b/index.html
@@ -782,9 +782,9 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>I build partnerships that move the needle. At PwC, I designed the national Mid-Market alliance strategy from scratch—no playbook, no precedent. Result: 15% YoY growth and 24% pipeline expansion across Microsoft, Workday, Salesforce, and SAP. Managed a $10M portfolio with 12% YoY growth.</p>
-                <p>My approach: Focus on mutual value creation, not just deal size. Map stakeholder incentives obsessively. Move fast on small wins to build trust before asking for enterprise commitments. And stay intellectually curious—whether that's using AI to automate partnership workflows or building this website from scratch to understand what our merchant partners are actually dealing with.</p>
-                <p>I'm AI-native by necessity and choice. The best partnership managers in 2026 don't just make deals—they understand the tech stack, experiment with new tools, and bring a builder's mentality to every conversation. That curiosity compounds. (Yes, I built the snake game on this site. It's a filter—if you don't value lifelong learning and tinkering, we probably aren't a fit.)</p>
+                <p>I build partnerships that move the needle. At PwC, I designed the national Mid-Market alliance strategy from scratch (no playbook, no precedent). Result: 15% YoY growth and 24% pipeline expansion across Microsoft, Workday, Salesforce, and SAP. Managed a $10M portfolio with 12% YoY growth.</p>
+                <p>My approach: Focus on mutual value creation, not just deal size. Map stakeholder incentives obsessively. Move fast on small wins to build trust before asking for enterprise commitments. And stay intellectually curious, whether that's using AI to automate partnership workflows or building this website from scratch to better understand what our merchant partners are actually dealing with.</p>
+                <p>I'm a lifelong learner who believes the best ideas come from tinkering. I use AI daily, I code on weekends (yes, I built that snake game you might have noticed), and I'm constantly experimenting with new tools to see how they can make partnerships more effective. If you think curiosity and hands-on experimentation make someone better at their job, we'll get along great.</p>
             </div>
             <div>
                 <h3 style="color: #5eead4; margin-bottom: 20px; font-size: 24px;">Core Expertise</h3>
