--- a/index.html
+++ b/index.html
@@ -772,9 +772,37 @@
             <img src="https://media.licdn.com/dms/image/v2/D5603AQFFlLD84gO3ng/profile-displayphoto-shrink_200_200/B56ZbHUrPpGoAc-/0/1747100808463?e=1770249600&v=beta&t=lxX4JGBaafPbvWa6K4NF4o893Py1RV_nLLL7NtoeElw" alt="Shawn Fulham - Partner Development Manager at Shopify specializing in strategic partnerships and e-commerce innovation in Toronto" class="hero-avatar-img" loading="eager" width="150" height="150">
             <h1>Shawn Fulham - Partner Development Manager</h1>
             <h2>Strategic Partnerships & E-Commerce Innovation Expert</h2>
-            <p>Built $10M partnership portfolio with Microsoft, Salesforce, SAP & Workday at PwC. Now scaling merchant partnerships at Shopify. AI-native operator who believes the best partnership managers blend strategic thinking with hands-on experimentation.</p>
+            <p>Built $10M partnership portfolio and led cross-functional teams at PwC. Now scaling merchant partnerships at Shopify. AI-native operator who believes the best partnership managers blend strategic thinking with hands-on experimentation and thrive in ambiguity.</p>
             <a href="#contact" class="cta-button">Let's Connect</a>
         </div>
+    </section>
+
+    <!-- Partnership Spotlight Section -->
+    <section id="case-study">
+        <h2 class="section-title">Partnership Spotlight</h2>
+        <article class="experience-card" style="background: rgba(16, 185, 129, 0.05);">
+            <h3 style="color: #5eead4; font-size: 28px; margin-bottom: 20px;">Building PwC's Mid-Market Alliance Strategy (2024)</h3>
+            
+            <div style="margin-bottom: 20px;">
+                <h4 style="color: #10b981; font-size: 18px; margin-bottom: 10px;">Challenge</h4>
+                <p style="color: #e5e5e5; line-height: 1.8;">PwC's privately-owned and Mid-Market segments had no structured alliance partnership approach. We were leaving revenue on the table with Microsoft, Salesforce, SAP, and Workday.</p>
+            </div>
+
+            <div style="margin-bottom: 20px;">
+                <h4 style="color: #10b981; font-size: 18px; margin-bottom: 10px;">My Approach</h4>
+                <p style="color: #e5e5e5; line-height: 1.8;">Started with internal alignment (the foundation of any successful partnership strategy). Mapped stakeholder incentives across sales, marketing, delivery, and regional leaders. Built business case from scratch. Created go-to-market playbooks, compensation structures, and partnership KPIs that aligned with PwC's existing sales motion.</p>
+            </div>
+
+            <div style="margin-bottom: 20px;">
+                <h4 style="color: #10b981; font-size: 18px; margin-bottom: 10px;">Result</h4>
+                <p style="color: #e5e5e5; line-height: 1.8;">15% YoY sales growth, 24% pipeline expansion, $10M portfolio with 12% YoY growth. More importantly, created a repeatable model now being adopted across other segments.</p>
+            </div>
+
+            <div>
+                <h4 style="color: #10b981; font-size: 18px; margin-bottom: 10px;">Key Learning</h4>
+                <p style="color: #e5e5e5; line-height: 1.8;">The best partnerships start with internal alignment. If your own teams don't see the value, external partners never will.</p>
+            </div>
+        </article>
     </section>
 
     <!-- About Section -->
@@ -784,6 +812,7 @@
             <div class="about-text">
                 <p>I build partnerships that move the needle. At PwC, I designed the national Mid-Market alliance strategy from scratch (no playbook, no precedent). Result: 15% YoY growth and 24% pipeline expansion across Microsoft, Workday, Salesforce, and SAP. Managed a $10M portfolio with 12% YoY growth.</p>
                 <p>My approach: Focus on mutual value creation, not just deal size. Map stakeholder incentives obsessively. Move fast on small wins to build trust before asking for enterprise commitments. And stay intellectually curious, whether that's using AI to automate partnership workflows or building this website from scratch to better understand what our merchant partners are actually dealing with.</p>
+                <p>I've built partnerships in wildly different environments: from early-stage startups (BlueDot, Carrot Rewards) where we operated with duct tape and determination, to complex matrix organizations at PwC where I worked across sales, marketing, and regional teams. At PwC, I grew my alliance team from 0 to 4 people across Canada, setting the foundation for a national program. I know how to build strategy based on internal alignment, hire for partnerships, and create systems that scale beyond what one person can manage.</p>
                 <p>I'm a lifelong learner who believes the best ideas come from tinkering. I use AI daily, I code on weekends (yes, I built that snake game you might have noticed), and I'm constantly experimenting with new tools to see how they can make partnerships more effective. If you think curiosity and hands-on experimentation make someone better at their job, we'll get along great.</p>
             </div>
             <div>
@@ -811,8 +840,8 @@
                     <div class="label">Team Captain - $200K raised through partnership building</div>
                 </div>
                 <div class="fun-fact-item">
-                    <div class="emoji">🏃</div>
-                    <div class="label">Marathon runner - understand long-term commitment</div>
+                    <div class="emoji">🐕</div>
+                    <div class="label">Golden doodle dad to B - work-life balance matters</div>
                 </div>
                 <div class="fun-fact-item">
                     <div class="emoji">🏊‍♂️</div>
@@ -868,7 +897,7 @@
                     <h4>PwC Canada | Toronto, Ontario | 2024</h4>
                 </div>
             </div>
-            <p>Led Mid-Market alliance partnership strategy with Microsoft, Workday, Salesforce, and SAP in PwC's private segment. Designed and activated the national alliance strategy, growing sales 15% YoY and pipeline 24%. Managed a portfolio generating $10M in annual revenue with 12% YoY growth.</p>
+            <p>Built PwC's privately-owned/Mid-Market alliance strategy from scratch (no playbook, no precedent). Designed national program from ground zero and worked cross-functionally with sales, marketing, and regional teams in a complex matrix organization. Result: 15% YoY sales growth, 24% pipeline expansion, and $10M portfolio with 12% YoY growth across Microsoft, Workday, Salesforce, and SAP partnerships.</p>
         </article>
         
         <article class="experience-card">
@@ -890,7 +919,7 @@
                     <h4>BlueDot (2019-2020) | Carrot Rewards (2016-2019) | Toronto, Ontario</h4>
                 </div>
             </div>
-            <p>Built foundation in B2B SaaS sales and account executive roles. Grew public health pipeline to $5M+ in qualified leads within 3 months at BlueDot. Achieved 300% YoY sales growth and 120% quarterly quota attainment at Carrot Rewards. Cultivated enterprise partnerships across federal and provincial governments.</p>
+            <p>Built foundation in B2B SaaS sales at early-stage startups where ambiguity and limited resources were the norm. At BlueDot, grew public health pipeline to $5M+ in qualified leads within 3 months with zero marketing budget (pure duct tape and determination). At Carrot Rewards, achieved 300% YoY sales growth and 120% quarterly quota attainment while cultivating enterprise partnerships across federal and provincial governments. Learned to build with what you have, move fast, and create your own tools when the budget doesn't exist.</p>
         </article>
     </section>
 
