--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
         <div class="about-content">
             <div class="about-text">
                 <p>I build partnerships that move the needle. At PwC, I designed the national Mid-Market alliance strategy from scratch (no playbook, no precedent). Result: 15% YoY growth and 24% pipeline expansion across Microsoft, Workday, Salesforce, and SAP. Managed a $10M portfolio with 12% YoY growth.</p>
-                <p>My approach: Focus on mutual value creation, not just deal size. Map stakeholder incentives obsessively. Move fast on small wins to build trust before asking for enterprise commitments. I stay intellectually curious—using AI to automate workflows and building tools (like this site) to understand what partners actually need.</p>
+                <p>My approach: Focus on mutual value creation, not just deal size. Map stakeholder incentives obsessively. Move fast on small wins to build trust before asking for enterprise commitments. I stay intellectually curious by using AI to automate workflows and building tools (like this site) to understand what partners actually need.</p>
                 <p>I've built partnerships in wildly different environments: from early-stage startups (BlueDot, Carrot Rewards) where we operated with duct tape and determination, to complex matrix organizations at PwC where I worked across sales, marketing, and regional teams. At PwC, I grew my alliance team from 0 to 4 people across Canada, setting the foundation for a national program. I know how to build strategy based on internal alignment, hire for partnerships, and create systems that scale beyond what one person can manage.</p>
                 <p>I'm a lifelong learner who uses AI daily and codes on weekends (built this site and that snake game) because curiosity makes me better at partnerships.</p>
             </div>
@@ -859,12 +859,12 @@
 
             <div style="margin-bottom: 20px;">
                 <h4 style="color: #10b981; font-size: 18px; margin-bottom: 10px;">My Approach</h4>
-                <p style="color: #e5e5e5; line-height: 1.8;">Started with internal alignment (the foundation of any successful partnership strategy). Mapped stakeholder incentives across sales, marketing, delivery, and regional leaders. Built business case from scratch. Created go-to-market playbooks, compensation structures, and partnership KPIs that aligned with PwC's existing sales motion.</p>
+                <p style="color: #e5e5e5; line-height: 1.8;">Started with internal alignment (the foundation of any successful partnership strategy). Mapped stakeholder incentives across sales, marketing, delivery, and regional leaders. Built business case from scratch. Created go-to-market playbooks and partnership KPIs that aligned with PwC's existing sales motion.</p>
             </div>
 
             <div style="margin-bottom: 20px;">
                 <h4 style="color: #10b981; font-size: 18px; margin-bottom: 10px;">Result</h4>
-                <p style="color: #e5e5e5; line-height: 1.8;">15% YoY sales growth, 24% pipeline expansion, $10M portfolio with 12% YoY growth. More importantly, created a repeatable model now being adopted across other segments.</p>
+                <p style="color: #e5e5e5; line-height: 1.8;">15% YoY sales growth, 24% pipeline expansion, $10M portfolio. More importantly, created a repeatable model now being adopted across other segments.</p>
             </div>
 
             <div>
@@ -886,7 +886,7 @@
                     <h4>Shopify | Toronto, Ontario | November 2024 - Present</h4>
                 </div>
             </div>
-            <p>Working across Sales, merchant success, and marketing to help grow agency partners' Shopify businesses and thrive in digital commerce.</p>
+            <p>Responsible for helping extend GTM reach, build strategic commercial plans, and driving revenue activities through partners across the US and Canada. Working across Sales, merchant success, and marketing to help grow agency partners' Shopify businesses.</p>
         </article>
         
         <article class="experience-card">
