--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
         
         <!-- Fun Facts Section -->
         <div class="fun-facts">
-            <h3>Beyond Work: Why Curiosity Compounds</h3>
+            <h3>When I'm Not Building Partnerships</h3>
             <div class="fun-facts-grid">
                 <div class="fun-fact-item">
                     <div class="emoji">🚴</div>
@@ -820,20 +820,12 @@
                     <div class="label">2x Half Ironman finisher</div>
                 </div>
                 <div class="fun-fact-item">
-                    <div class="emoji">🌏</div>
-                    <div class="label">Partnered my way through SE Asia as student</div>
-                </div>
-                <div class="fun-fact-item">
                     <div class="emoji">🤖</div>
                     <div class="label">AI-native - built this site with Claude</div>
                 </div>
                 <div class="fun-fact-item">
                     <div class="emoji">🌍</div>
                     <div class="label">Based in Toronto 🍁</div>
-                </div>
-                <div class="fun-fact-item">
-                    <div class="emoji">🤝</div>
-                    <div class="label">8+ years building partnerships</div>
                 </div>
                 <div class="fun-fact-item game-designer-item" id="game-designer-fact">
                     <div class="emoji">💻</div>
